# Hook-Of-The-Reaper-Linux

./: .gitignore  CMakeLists.txt  Global.h  HookOfTheReaper.desktop  LINUX_BUILD.md  README.md  ServiceController.cpp  ServiceController.h  hookOfTheReaper.cpp  hookOfTheReaper.h  hookofthereaper.service  main.cpp  make_appimage.sh  make_appimage_docker.sh  setup_linux.sh
.github/workflows/: build-appimage.yml
COMDeviceList/: ALEDStripLC.cpp  ALEDStripLC.h  ComDeviceList.cpp  ComDeviceList.h  LightGun.cpp  PacDriveControl.cpp  PacDriveControl.h
HookerEngine/: HookCOMPort.cpp  HookCOMPort.h  HookTCPSocket.cpp  HookerEngine.cpp  HookerEngine.h
Windows/: addLightGunWindow.h  addLightGunWindowV2.cpp  addLightGunWindowV2.h  editLightGunWindow.h  editLightGunWindowV2.cpp  editLightGunWindowV2.h  testComPortWindow.h
data/: settings.hor
defaultLG/: 0_Game_Files_Location.txt  2spicy.txt  R29E52.txt  R2VE01.txt  R5IE4Q_hack.txt  R74E20.txt  R8LE20.txt  R8XZ52.txt  RCJE8P.txt  RCSE20.txt  RGDEA4.txt  RGSE8P.txt  RL6E69.txt  RM2E69.txt  RQ5E5G.txt  RRBE41.txt  RY2P41.txt  SBDE08.txt  SBQE4Z.txt  SBSEFP.txt  SC2E8P.txt  SCES-02569.txt  SFZEPZ.txt  SLES-02732.txt  SLES-03846.txt  SLES-50650.txt  SLES-51617.txt  SLES-51617_P2.txt  SLPM-86048.txt  SLPS-01106.txt  SLPS-02474.txt  SLUS-00119.txt  SLUS-00386.txt  SLUS-00630.txt  SLUS-20219.txt  SLUS-20389.txt  SLUS-20492.txt  SLUS-20669.txt  SS7EFP.txt  SSNEYG.txt  (+136 more)
defaultLG/MAME_LUA/: Lua_Notes.txt  area51.lua  bbust2.lua  carnevil.lua  carnevil.txt  cryptklr.lua  cryptklr.txt  duckhunt.lua  duckhunt.txt  invasnab.lua  invasnab.txt  jdredd.lua  le2.lua  lethalen.lua  lethalen.txt  lethalj.lua  lethalj.txt  maxforce.lua  policetr.lua  ptblank.lua  ptblank.txt  sgunner.lua  sgunner.txt  timecris.lua  timecris.txt  timecrisOld.lua  timecrs2.lua  timecrs2.txt
